# tjbot

./: .gitignore  .gitmodules  CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  tjbot
bootstrap/: bootstrap.sh
config/: README.md  config.py  pyproject.toml
config/config/: __init__.py  cli.py  config_loader.py  config_writer.py  device_detection.py  model_registry.py  schema_loader.py  validators.py  wizard.py
config/config/credential_guides/: __init__.py  azure.py  google_cloud.py  ibm_cloud.py  validator.py
config/config/templates/: azure-credentials.env.template  ibm-credentials.env.template  tjbot.toml.template
config/tests/: test_schema_loader.py  test_validators.py  test_wizard_schema_integration.py
recipes/chat_with_tj/: README.md  ibm-credentials.sample.env  index.js  index.ts  package-lock.json  package.json  recipe.sample.toml  recipe.toml
recipes/disco_party/: README.md  index.ts  package-lock.json  package.json  recipe.toml
recipes/hello_tjbot/: .prettierignore  README.md  index.js  index.ts  package-lock.json  package.json  recipe.toml  tsconfig.json
recipes/parrot/: README.md  index.ts  package-lock.json  package.json
recipes/peekaboo/: README.md  index.ts  mise.toml  package-lock.json  package.json  recipe.toml
recipes/simon_says/: README.md  ibm-credentials.sample.env  index.mts  index.ts  package.json  recipe.toml
recipes/speech_to_text/: index.mts  package.json  recipe.toml  tsconfig.json
recipes/text_to_speech/: index.mts  package.json  recipe.toml
tests/: README.md  mise.toml  package-lock.json  package.json
(+21 files in other folders)
