[project]
name = "config"
version = "1.0.0"
description = "Interactive configuration tool for TJBot"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "TJBot Project Contributors"}
]
keywords = ["tjbot", "raspberry-pi", "watson", "ai", "robotics", "configuration"]

dependencies = [
    "inquirer>=3.1.0",
    "tomlkit>=0.12.0",
    "rich>=13.7.0",
    "jsonschema>=4.19.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.scripts]
config = "config.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config"]

[dependency-groups]
dev = []
